Fix black border on iOS

--- a/src/css/components/range-slider.pcss
+++ b/src/css/components/range-slider.pcss
@@ -39,6 +39,7 @@ input[type=range]::-webkit-slider-thumb {
     height: 24px;
     width: 24px;
     border-radius: 50%;
+    border: 0 !important;
     cursor: pointer;
 }
 
@@ -49,6 +50,7 @@ input[type=range]::-moz-range-thumb {
     height: 24px;
     width: 24px;
     border-radius: 50%;
+    border: 0 !important;
     cursor: pointer;
 }
 
@@ -59,5 +61,6 @@ input[type=range]::-ms-thumb {
     height: 24px;
     width: 24px;
     border-radius: 50%;
+    border: 0 !important;
     cursor: pointer;
 }
